--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
+body {
+    background-color: #1e3259;
+    margin: 0;
+}
+
 header {
     font-family: "Odibee Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 64px;
     text-transform: uppercase;
+    background-color: #0b1b3b;
 }
 main {
     font-family: "Fredoka", sans-serif;
@@ -13,11 +19,23 @@ main {
     "wdth" 87.5;
     font-size: 32px;
 }
+.logo {
+    color: #4b6cad;
+}
+
+.main-container {
+    padding-top: 32px; 
+    padding-bottom: 32px;
+}
 .music-player-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 10px;
-    row-gap: 10px;
+    column-gap: 64px;
+    row-gap: 32px;
+}
+.music-player-list-item-text {
+    color: #b3ccff;
+    text-align: center;
 }
 .music-player-list-item {
     
