--- a/css/styles.css
+++ b/css/styles.css
@@ -3,27 +3,42 @@ body {
     margin: 0;
 }
 
-header {
-    font-family: "Odibee Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 64px;
-    text-transform: uppercase;
-    background-color: #0b1b3b;
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
 main {
     font-family: "Fredoka", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 87.5;
+  font-variation-settings:"wdth" 87.5;
     font-size: 32px;
 }
+a {
+    text-decoration: none;
+    }
+    
+    ul {
+    list-style: none;
+    }
+    img {
+        display: block; 
+    }
+
+    ul {
+        margin: 0;
+        padding: 0;
+    }
+
+    .header-container {
+        font-family: "Odibee Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 64px;
+        text-transform: uppercase;
+        background-color: #0b1b3b;
+        padding-top: 16px;
+        padding-bottom: 12px;
+    }
 .logo {
     color: #4b6cad;
-    margin-left: 32px;
+    margin-left: 64px;
 }
 
 .main-container {
@@ -43,7 +58,7 @@ main {
     
 }
 .music-player-list-item {
-    
+    margin-left: 64px;
 }
 .footer-container {
     padding-top: 32px;
