--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ a {
     }
 .logo {
     color: #4b6cad;
-    margin-left: 64px;
+    margin-left: 124px;
 }
 
 .main-container {
@@ -48,17 +48,19 @@ a {
 .music-player-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 64px;
+    column-gap: 124px;
     row-gap: 64px;
+    margin-left: 124px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+.img-music-players {
+    border-radius: 16px;
 }
 .music-player-list-item-text {
     color: #b3ccff;
     text-align:center;
-    margin: 0;
-    
-}
-.music-player-list-item {
-    margin-left: 64px;
+    margin: 2px 0px 0px 0px;
 }
 .footer-container {
     padding-top: 32px;
