--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ a {
         background-color: #0b1b3b;
         padding-top: 16px;
         padding-bottom: 12px;
-        box-shadow: 20px 20px 50px 15px #1c3c82;
+        box-shadow: 20px 20px 50px 15px #377aff72;
     }
 .logo {
     color: #4b6cad;
