--- a/childPages/all-music-folder/all-music-styles.css
+++ b/childPages/all-music-folder/all-music-styles.css
@@ -44,37 +44,19 @@ a {
 }
 
 .main-container {
-    padding-top: 32px; 
-    padding-bottom: 32px;
-    
+    padding-top: 64px; 
+    padding-bottom: 64px;
+    display:inline-block;
 }
-
-.music-player-list-item {
-    margin-left: 0 auto;
-    margin-right: 0 auto;
-      margin-top: 32px;
-      margin-bottom: 32px;
-    border-radius: 32px;
-    padding: 16px;
-}
-.music-player-list-item:hover {
-    margin-left: 0 auto;
-    margin-right: 0 auto;
-    animation-name: example;
-  animation-duration:  0.5s;
-  animation-fill-mode: forwards;
-}
-@keyframes example {
-    from {background-color: #1e3259}
-    to {background-color: #4565a472;}
-  }
 .img-music-players {
     border-radius: 32px;
 }
 .music-player-list-item-text {
+    font-size: 45px;
     color: #b3ccff;
     text-align:center;
-    margin: 2px 0px 0px 0px;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 .footer-container {
     padding-top: 32px;
