--- a/css/all-music-styles.css
+++ b/css/all-music-styles.css
@@ -10,7 +10,8 @@ main {
   font-variation-settings:"wdth" 87.5;
     font-size: 32px;
 }
-a {
+a 
+{
     text-decoration: none;
     }
     
@@ -49,8 +50,7 @@ a {
 }
 .img-music-players {
     border-radius: 32px;
-    display: flex;
-    justify-content: center;
+    padding-left: 140px;
 }
 .music-player-list-item-text {
     font-size: 45px;
