--- a/css/all-music-styles.css
+++ b/css/all-music-styles.css
@@ -49,8 +49,8 @@ a
     padding-bottom: 64px;
 }
 .img-music-players {
-    border-radius: 32px;
-    padding-left: 140px;
+    padding-left: 120px;
+    border-radius: 50px;
 }
 .music-player-list-item-text {
     font-size: 45px;
@@ -58,6 +58,15 @@ a
     text-align:center;
     margin-top: 10px;
     margin-bottom: 0;
+}
+.music {
+    margin-top: 64px;
+}
+.song-list-item {
+    background-color: #4664a1;
+    display: inline-flex;
+    max-width: 1120px;
+    
 }
 .footer-container {
     padding-top: 32px;
