--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@ main {
     font-family: "Fredoka", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-variation-settings:"wdth" 87.5;
-    font-size: 28px;
+    font-size: 36px;
 }
 a {
     text-decoration: none;
@@ -27,11 +26,6 @@ a {
     }
 
     .header-container {
-        font-family: "Odibee Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 65px;
-        text-transform: uppercase;
         background-color: #0b1b3b;
         padding-top: 15px;
         padding-bottom: 10px;
@@ -41,20 +35,29 @@ a {
         flex-direction: row;
     }
 .logo {
+            font-family: "Odibee Sans", sans-serif;
+                font-weight: 500;
+                font-style: normal;
+                font-size: 70px;
+                text-transform: uppercase;
     color: #4b6cad;
-    margin-left: 120px;
+    margin-left: 110px;
 }
 
 .main-container {
-    padding-top: 65px; 
-    padding-bottom: 65px;
+    padding-top: 70px; 
+    padding-bottom: 70px;
+    display: flex;
+        justify-content: center;
 }
 .music-player-list {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 65px;
-    row-gap: 65px;
-    margin-left: 125px;
+    column-gap: 70px;
+    row-gap: 70px;
+    max-width: 1100px;
+    margin-left: 165px;
+    margin-right: 165px;
 }
 .music-player-list-item {
     border-radius: 10%;
@@ -62,7 +65,7 @@ a {
 }
 .music-player-list-item:hover {
     animation-name: example;
-  animation-duration:  0.5s;
+  animation-duration:  0.6s;
   animation-fill-mode: forwards;
 }
 @keyframes example {
@@ -72,14 +75,16 @@ a {
 .img-music-players {
     border-radius: 10%;
     display: block;
+    width: 275px;
+     height: 275px;
 }
 .music-player-list-item-text {
     color: #b3ccff;
     text-align:center;
-    margin: 2px 0px 0px 0px;
+    margin: 6px 0px 0px 0px;
 }
 .footer-container {
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 36px;
+    padding-bottom: 36px;
     background-color: #0b1b3b;
 }
