--- a/css/all-music-styles.css
+++ b/css/all-music-styles.css
@@ -7,9 +7,9 @@ main {
     font-family: "Fredoka", sans-serif;
   font-weight: 500;
   font-style: normal;
+    font-size: 36px;
 }
-a 
-{
+a {
     text-decoration: none;
     }
     
@@ -26,25 +26,27 @@ a
     }
 
     .header-container {
-        font-family: "Odibee Sans", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 64px;
-        text-transform: uppercase;
         background-color: #0b1b3b;
-        padding-top: 16px;
-        padding-bottom: 12px;
-        box-shadow: 20px 20px 50px 15px #377aff72;
+        padding-top: 15px;
+        padding-bottom: 10px;
+        box-shadow: 21px 21px 55px 15px #377aff72;
         container: normal;
+        display: flex;
+        flex-direction: row;
     }
 .logo {
+            font-family: "Odibee Sans", sans-serif;
+                font-weight: 500;
+                font-style: normal;
+                font-size: 70px;
+                text-transform: uppercase;
     color: #4b6cad;
-    margin-left: 140px;
+    margin-left: 110px;
 }
 
 .main-container {
-    padding-top: 64px; 
-    padding-bottom: 64px;
+    padding-top: 70px; 
+    padding-bottom: 70px;
 }
 .section-img {
     display:grid;
