--- a/css/all-music-styles.css
+++ b/css/all-music-styles.css
@@ -95,6 +95,16 @@ a {
     background-color: #4664a1;
     display: flex;
 }
+.song-list-item-container:hover {
+    animation-name: example;
+    animation-duration:  0.6s;
+    animation-fill-mode: forwards;
+  }
+  @keyframes example {
+      from {background-color: #4664a1}
+      to {background-color: #6a89c7;}
+    }
+
 .song-img {
     margin: 6px;
     margin-left: 21px;
