--- a/css/all-music-styles.css
+++ b/css/all-music-styles.css
@@ -67,22 +67,20 @@ a {
     margin-top: 21px;
     margin-bottom: 21px;
 }
+.svg-img-buttons {
+fill: white;
+}
 .snuffle-play {
-    margin-top: 5px;
-    height: 45px;
-    width: 45px;
-    border-radius: 100%;
+    height: 55px;
+        width: 55px;
+        border-radius: 100%;
+        background-color: #344f86;
 }
 .play {
     height: 55px;
     width: 55px;
     border-radius: 100%;  
-}
-.other-buttons {
-    margin-top: 5px;
-    height: 45px;
-    width: 45px;
-    border-radius: 100%;
+    background-color: #344f86;
 }
 .music-player-list-item-text {
     font-size: 40px;
