--- a/css/all-music-player-styles.css
+++ b/css/all-music-player-styles.css
@@ -1,13 +1,12 @@
+* {
+    box-sizing: border-box;
+
+}
 body {
+    height: 100vh;
     background-color: #1e3259;
     margin: 0;
-}
-
-main {
     font-family: "Fredoka", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 36px;
 }
 
 a {
@@ -16,16 +15,14 @@ a {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 img {
     display: block;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-}
 
 .header-container {
     background-color: #0b1b3b;
@@ -45,91 +42,6 @@ ul {
     text-transform: uppercase;
     color: #4b6cad;
     margin-left: 110px;
-}
-
-.main-container {
-    padding-top: 70px;
-    padding-bottom: 70px;
-}
-
-.section-img {
-    display: grid;
-    justify-content: center;
-
-}
-
-.img-music-players {
-    border-radius: 100%;
-    width: 330px;
-    height: 330px;
-}
-
-.buttons {
-    display: flex;
-    flex-direction: row;
-    gap: 21px;
-    justify-content: center;
-    margin-top: 21px;
-    margin-bottom: 21px;
-}
-
-.music-player-list-item-text {
-    font-size: 40px;
-    color: #b3ccff;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 0;
-}
-
-.song-list-item-container {
-    background-color: #4664a1;
-    display: flex;
-}
-
-.song-list-item-container:hover {
-    animation-name: example;
-    animation-duration: 0.6s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes example {
-    from {
-        background-color: #4664a1
-    }
-
-    to {
-        background-color: #6a89c7;
-    }
-}
-
-.song-img {
-    margin: 6px;
-    margin-left: 21px;
-    border-radius: 10%;
-    width: 55px;
-    height: 55px;
-}
-
-.all-songs-list {
-    display: flex;
-    flex-direction: column;
-}
-
-.song-name {
-    font-size: 21px;
-    font-weight: 500;
-    margin: 0;
-    margin-top: 20px;
-    margin-left: 10px;
-}
-
-.song-artist {
-    display: flex;
-    font-size: 21px;
-    font-weight: 300;
-    margin: 0;
-    margin-top: 20px;
-    margin-left: 10px;
 }
 
 
