--- a/css/all-music-styles.css
+++ b/css/all-music-styles.css
@@ -119,6 +119,22 @@ font-size: 21px;
     font-weight: 500;
     margin: 0;
 }
+.progress-container {
+    background: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px 0;
+    height: 4px;
+    width: 100%;
+}
+
+.progress {
+    background-color: #162950;
+    border-radius: 5px;
+    height: 100%;
+    width: 0%;
+    transition: width 0.1s linear;
+}
 .action-btn {
     background-color: #6a89c7;
     border: 0;
